@@ -4,7 +4,7 @@ import java.util.*;
 
 public class MissingAndDup {
     public static void main(String[] args) {
-        List<Integer> a = List.of(1, 1, 3, 4, 5);
+        List<Integer> a = List.of(1, 2, 2, 4, 5);
 
         System.out.println(getMissingAndDuplicated(a));
     }
@@ -13,35 +13,39 @@ public class MissingAndDup {
         int n = a.size();
         int xr = 0;
 
-        for(int i = 0; i < n; i++){
-            xr = xr ^ a.get(i);
-            xr = xr ^ (i+1);
+        //xor the each element correspoding to their indices
+        for (int i = 0; i < n; i++) {
+            xr ^= a.get(i); //xor the element
+            xr ^= (i + 1); //xoring the indices
         }
 
-        int number = xr ^ -(xr-1);
+        int number = xr ^ -(xr - 1); //isolate the rightmost bit
         int one = 0;
         int zero = 0;
 
-        for(int i = 0; i < n; i++){
-            if((a.get(i) & number) != 0)
+        //seperating the elements into two group based on their rightmost bit
+        for (int i = 0; i < n; i++) {
+            if ((a.get(i) & number) != 0)
                 one ^= a.get(i);
             else
                 zero ^= a.get(i);
         }
 
-        for(int i = 1; i <= n; i++){
+        //xor the indices of the two seperated groups
+        for (int i = 1; i <= n; i++) {
             if((i & number) != 0)
                 one ^= i;
             else
                 zero ^= i;
         }
 
+        //finding the duplicate number
         int cnt = 0;
         for(int i = 0; i < n; i++){
             if(a.get(i) == zero) cnt++;
         }
 
-        if(cnt == 2) return new ArrayList<>(List.of(zero, one));
-        return new ArrayList<>(List.of(one, zero));
+        if(cnt == 2) return new ArrayList<>(Arrays.asList(zero, one)); //returning when zero element is duplicate
+        return new ArrayList<>(Arrays.asList(one, zero)); //returning when one element is dup
     }
 }
